<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UI-Combine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">These are your scanned items:</string>
    <string name="action_add">Add new tag -&gt;start Activity!</string>
    <string name="action_edit">Edit your tag</string>
    <string name="IdLabel">TagID: </string>
    <string name="ID">some numbers</string>
    <string name="NameText">Name</string>
    <string name="enter_name_string">Enter a name for the Tag</string>
    <string name="tag_name">Name</string>
    <string name="toggle_text">Reminder setting</string>
    <string name="spinnerText">Select category</string>
    <string name="btnSaveText">Save</string>
    <string name="btnCancelText">Cancel</string>
    <string name="delete_all">Delete all Tags</string>
    <string name="wearing_indicator">Item with you</string>
    <string name="connectButton_text">Adjust Bluetooth connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">com.lannbox.rfduinotest.PREFERENCE_FILE_KEY</string>

</resources>
