<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ui_nfc.MainActivity" >

	<item android:id="@+id/action_add"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_add"
          android:showAsAction="always" />

    <item android:id="@+id/action_edit"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/action_edit"
          android:showAsAction="always" />
	
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/delete_all"
        android:orderInCategory="100"
        android:title="@string/delete_all"
        android:showAsAction="never"/>

</menu>
