<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/item" >

    <TextView
        android:id="@+id/tagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tag_name" />

    <Button
        android:id="@+id/deleteButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:drawableLeft="@android:drawable/ic_menu_delete" />

    <ToggleButton
        android:id="@+id/remindButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/toggle_text"
        android:textOff="Reminder inactive"
        android:textOn="Reminder active" />

    <RadioButton
        android:id="@+id/wearingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tagName"
        android:clickable="false"/>       
        

    <TextView
        android:id="@+id/indicatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wearingIndicator"
        android:layout_alignBottom="@+id/wearingIndicator"
        android:layout_toRightOf="@+id/wearingIndicator"
        android:text="@string/wearing_indicator" />

</RelativeLayout>
